@@ -1929,7 +1929,8 @@ LISPSYM(spanish," ESPA\303\221OL",i18n) /* a language for MISC [' ' => utf8] */
 LISPSYM(dutch,"NEDERLANDS",i18n) /* a language for MISC */
 LISPSYM(russian," \320\240\320\243\320\241\320\241\320\232\320\230\320\231",i18n) /* a language for MISC [' ' => utf8] */
 #endif
-LISPSYM(init_hooks,"*INIT-HOOKS*",system) /* variable for SPVW */
+LISPSYM(init_hooks,"*INIT-HOOKS*",custom) /* variable for SPVW */
+LISPSYM(fini_hooks,"*FINI-HOOKS*",custom) /* variable for SPVW */
 LISPSYM(quiet,"*QUIET*",system) /* variable for SPVW */
 LISPSYM(Klisting,"LISTING",keyword) /* argument for SPVW */
 LISPSYM(Koutput_file,"OUTPUT-FILE",keyword) /* argument for SPVW */
